--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -37,7 +37,7 @@ jobs:
 
                   REPO_DIRTY=$(git status --short)
                   if [[ ! -z "$REPO_DIRTY" ]]; then
-                    git log -p
+                    git diff
                     echo ""
                     echo -e "\r⛔️ flows.yaml hasn't been compiled, please run:"
                     echo -e "node ./scripts/flows.js"
