--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -3,8 +3,8 @@
     "version": "0.39.5",
     "description": "Nango's shared components.",
     "type": "module",
-    "main": "dist/lib/index.js",
-    "typings": "dist/lib/index.d.ts",
+    "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
     "scripts": {
         "build": "rimraf dist && tsc",
         "prepublishOnly": "npm install && npm run build"
