[NAN-578] Implement Google Social Login/Signup (#1872)
## Describe your changes
Adds in google auth using workos


![image](https://github.com/NangoHQ/nango/assets/1724137/8deeef6c-bf77-4677-a62e-5b929a7ce331)


## Issue ticket number and link
NAN-578

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,7 @@ NANGO_TELEMETRY_SDK=false
 # Getting Started configuration
 DEFAULT_GITHUB_CLIENT_ID=
 DEFAULT_GITHUB_CLIENT_SECRET=
+
+# Hosted Auth Configuration
+WORKOS_API_KEY=
+WORKOS_CLIENT_ID=
