fix(shared): specify published files

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -75,5 +75,10 @@
         "@types/uuid": "^9.0.0",
         "typescript": "^5.3.3",
         "vitest": "1.4.0"
-    }
+    },
+    "files": [
+        "dist/**/*",
+        "flows.yaml",
+        "providers.yaml"
+    ]
 }
