--- a/dev/docker-compose.dev.yaml
+++ b/dev/docker-compose.dev.yaml
@@ -31,10 +31,28 @@ services:
             - nango
 
     nango-redis:
-        image: "redis:latest"
+        image: 'redis:latest'
         container_name: nango-redis
         ports:
-            - "6379:6379"
+            - '6379:6379'
+        networks:
+            - nango
+
+    es:
+        container_name: es
+        image: elasticsearch:8.12.2
+        ulimits:
+        memlock:
+            soft: -1
+            hard: -1
+        volumes:
+            - esdata1:/usr/share/elasticsearch/data
+        ports:
+            - 9200:9200
+            - 9300:9300
+        environment:
+            - discovery.type=single-node
+            - xpack.security.enabled=false
         networks:
             - nango
 
