--- a/.env.example
+++ b/.env.example
@@ -71,7 +71,9 @@ DEFAULT_GITHUB_CLIENT_ID=
 DEFAULT_GITHUB_CLIENT_SECRET=
 
 # ----- Logs
-NANGO_LOGS_ES_URL=
+NANGO_LOGS_ES_URL="http://localhost:9200"
+NANGO_LOGS_ES_USER=""
+NANGO_LOGS_ES_PWD=""
 
 # Hosted Auth Configuration
 WORKOS_API_KEY=
