--- a/.eslintrc
+++ b/.eslintrc
@@ -56,6 +56,7 @@
         "@typescript-eslint/no-invalid-void-type": "warn",
         "@typescript-eslint/no-base-to-string": "warn",
         "@typescript-eslint/restrict-plus-operands": "warn",
+        "@typescript-eslint/consistent-type-exports": "error",
         "react/prop-types": "off",
         "@typescript-eslint/no-unused-vars": [
             "error",
