--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,6 +23,7 @@
         "@nangohq/node": "^0.39.8",
         "@sentry/node": "^7.105.0",
         "@temporalio/client": "^1.9.1",
+        "@workos-inc/node": "^6.7.0",
         "amqplib": "^0.10.3",
         "archiver": "^6.0.1",
         "axios": "^1.3.4",
