fix(api): get env by secretKey

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,9 @@ DEFAULT_GITHUB_CLIENT_SECRET=
 # Hosted Auth Configuration
 WORKOS_API_KEY=
 WORKOS_CLIENT_ID=
+
+# Encryption key for secrets / records stored in database
+NANGO_ENCRYPTION_KEY=
+
+# Enable or disable environment keys cache
+NANGO_CACHE_ENV_KEYS=
