--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@hapi/boom": "^10.0.1",
+        "@nangohq/internals": "file:../internals",
         "@nangohq/shared": "^0.39.8",
         "@workos-inc/node": "^6.2.0",
         "axios": "^1.3.4",
