--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -18,6 +18,7 @@
     },
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "dependencies": {
+        "@nangohq/internals": "file:../internals",
         "@nangohq/shared": "^0.39.8",
         "@trpc/client": "^10.44.0",
         "@trpc/server": "^10.44.0",
