(feat) [NAN-638] updated and docs (#1911)
## Describe your changes
Updates name for the oauth overrides to be more explicit.
- Fix creating a new connection to show right after creation
- Fix deleting a connection to not show right after deletion

## Issue ticket number and link
NAN=638

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

---------

Co-authored-by: Samuel Bodin <1637651+bodinsamuel@users.noreply.github.com>

--- a/docs-v2/spec.yaml
+++ b/docs-v2/spec.yaml
@@ -363,6 +363,12 @@ paths:
                                 no_expiration:
                                     type: boolean
                                     description: (OAuth2, optional) If the provider gives access tokens that don't expire, pass in `true` to avoid an import validation error.
+                                oauth_client_id_override:
+                                    type: string
+                                    description: (OAuth2, optional) Override the integration's OAuth client id
+                                oauth_client_secret_override:
+                                    type: string
+                                    description: (OAuth2, optional) Override the integration's OAuth client secret
                                 oauth_token:
                                     type: string
                                     description: (OAuth 1, required) The client token to be attached to the connection.
