[nan-591] table name and .env example

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,6 @@ DEFAULT_GITHUB_CLIENT_SECRET=
 # Hosted Auth Configuration
 WORKOS_API_KEY=
 WORKOS_CLIENT_ID=
+
+# Google Cloud Configuration
+GOOGLE_APPLICATION_CREDENTIALS=
