[nan-644] additional updates

--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -12,7 +12,7 @@
             "path": "../runner"
         },
         {
-            "path": "../internals"
+            "path": "../utils"
         }
     ],
     "include": ["lib/**/*"]
