--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -9,7 +9,7 @@
             "path": "../node-client"
         },
         {
-            "path": "../internals"
+            "path": "../utils"
         }
     ],
     "include": ["lib/**/*"]
