--- a/packages/persist/Dockerfile
+++ b/packages/persist/Dockerfile
@@ -11,6 +11,7 @@ WORKDIR /nango
 COPY packages/node-client/ packages/node-client/
 COPY packages/shared/ packages/shared/
 COPY packages/persist/ packages/persist/
+COPY packages/utils/ packages/utils/
 COPY package*.json ./
 
 RUN npm pkg delete scripts.prepare
