--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,8 +23,8 @@
     },
     "dependencies": {
         "@hapi/boom": "^10.0.1",
-        "@nangohq/internals": "file:../internals",
         "@nangohq/shared": "^0.39.8",
+        "@nangohq/utils": "file:../utils",
         "@workos-inc/node": "^6.2.0",
         "axios": "^1.3.4",
         "body-parser": "1.20.2",
