--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,8 +20,8 @@
         "@aws-sdk/client-s3": "3.348.0",
         "@datadog/datadog-api-client": "^1.16.0",
         "@hapi/boom": "^10.0.1",
-        "@nangohq/internals": "file:../internals",
         "@nangohq/node": "^0.39.8",
+        "@nangohq/utils": "file:../utils",
         "@sentry/node": "^7.105.0",
         "@temporalio/client": "^1.9.1",
         "amqplib": "^0.10.3",
