--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
     nango-db:
-        image: postgres
+        image: postgres:15.5-alpine
         container_name: nango-db
         environment:
             POSTGRES_PASSWORD: nango
@@ -34,6 +34,7 @@ services:
             - LOG_LEVEL=${LOG_LEVEL:-info}
             - TELEMETRY=${TELEMETRY}
             - NANGO_SERVER_WEBSOCKETS_PATH=${NANGO_SERVER_WEBSOCKETS_PATH}
+            - NANGO_LOGS_ES_URL=${NANGO_LOGS_ES_URL:-http://localhost:9500}
         volumes:
             - './packages/shared/providers.yaml:/usr/nango-server/src/packages/shared/providers.yaml'
         restart: always
@@ -41,16 +42,38 @@ services:
             - '${SERVER_PORT:-3003}:${SERVER_PORT:-3003}'
         depends_on:
             - nango-db
+            - nanog-es
         networks:
             - nango
 
     nango-redis:
-        image: "redis:latest"
+        image: 'redis:latest'
         container_name: nango-redis
         ports:
-            - "6379:6379"
+            - '6379:6379'
+        networks:
+            - nango
+
+    nanog-es:
+        image: elasticsearch:8.12.2
+        ulimits:
+            memlock:
+                soft: -1
+                hard: -1
+        volumes:
+            - esdata1:/usr/share/elasticsearch/data
+        ports:
+            - 9500:9500
+            - 9600:9300
+        environment:
+            - discovery.type=single-node
+            - xpack.security.enabled=false
         networks:
             - nango
 
 networks:
     nango:
+
+volumes:
+    esdata1:
+        driver: local
