--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -28,7 +28,7 @@ jobs:
               run: |
                   # Build, install CLI and verify it can run
                   npm install
-                  npm run build -w @nangohq/node -w @nangohq/shared -w nango
+                  npm run build -w @nangohq/node -w @nangohq/utils -w @nangohq/shared -w nango
                   npm install -g ./packages/cli
                   NANGO_CLI_UPGRADE_MODE=ignore nango version --debug
 
