[nan-644] remove winston where not used

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -55,8 +55,7 @@
         "semver": "^7.5.4",
         "serialize-error": "11.0.3",
         "simple-oauth2": "^5.0.0",
-        "uuid": "^9.0.0",
-        "winston": "^3.8.2"
+        "uuid": "^9.0.0"
     },
     "engines": {
         "node": ">=16.7",
