(fix) [NAN-644] refactor logger and some environment detection logic out of (#1913)
## Describe your changes
Add ~`internals`~ `utils` package and move logger and some environment
detection logic there

## Issue ticket number and link
NAN-644

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -10,9 +10,10 @@
         },
         {
             "path": "../runner"
+        },
+        {
+            "path": "../utils"
         }
     ],
-    "include": [
-        "lib/**/*"
-    ]
+    "include": ["lib/**/*"]
 }
