--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -10,10 +10,10 @@
         },
         {
             "path": "../node-client"
+        },
+        {
+            "path": "../utils"
         }
     ],
-    "include": [
-        "lib/**/*",
-        "../shared/lib/express.d.ts",
-    ]
+    "include": ["lib/**/*", "../shared/lib/express.d.ts"]
 }
