--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -7,6 +7,9 @@
     "references": [
         {
             "path": "../node-client"
+        },
+        {
+            "path": "../utils"
         }
     ],
     "include": ["lib/**/*"]
