--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,6 +8,9 @@
             "path": "packages/frontend"
         },
         {
+            "path": "packages/utils"
+        },
+        {
             "path": "packages/jobs"
         },
         {
