--- a/packages/persist/package.json
+++ b/packages/persist/package.json
@@ -18,6 +18,7 @@
     },
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "dependencies": {
+        "@nangohq/utils": "file:../utils",
         "@nangohq/shared": "^0.39.8",
         "dd-trace": "5.2.0",
         "express": "^4.18.2",
