--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -19,6 +19,7 @@
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "dependencies": {
         "@nangohq/shared": "^0.39.8",
+        "@nangohq/utils": "file:../utils",
         "@trpc/client": "^10.44.0",
         "@trpc/server": "^10.44.0",
         "connect-timeout": "^1.9.0",
