--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@hapi/boom": "^10.0.1",
         "@nangohq/shared": "^0.39.8",
+        "@nangohq/utils": "file:../utils",
         "@workos-inc/node": "^6.2.0",
         "axios": "^1.3.4",
         "body-parser": "1.20.2",
@@ -52,8 +53,6 @@
         "redis": "^4.6.11",
         "simple-oauth2": "^5.0.0",
         "uuid": "^9.0.0",
-        "winston": "^3.8.2",
-        "winston-daily-rotate-file": "^4.7.1",
         "ws": "^8.12.1"
     },
     "devDependencies": {
