--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,6 +5,9 @@
     "type": "module",
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
+    "scripts": {
+        "build": "rimraf ./dist && tsc"
+    },
     "keywords": [],
     "repository": {
         "type": "git",
