[nan-644] add in files

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,5 +18,8 @@
     "dependencies": {
         "winston": "3.8.2"
     },
-    "devDependencies": {}
+    "devDependencies": {},
+    "files": [
+        "dist/**/*"
+    ]
 }
