[nan-644] allow publish

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
     npm-publish:
-        if: github.ref == 'refs/heads/master'
+        #if: github.ref == 'refs/heads/master'
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
