--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -21,7 +21,6 @@
         "@datadog/datadog-api-client": "^1.16.0",
         "@hapi/boom": "^10.0.1",
         "@nangohq/node": "^0.39.8",
-        "@nangohq/utils": "file:../utils",
         "@sentry/node": "^7.105.0",
         "@temporalio/client": "^1.9.1",
         "amqplib": "^0.10.3",
@@ -55,6 +54,7 @@
         "semver": "^7.5.4",
         "serialize-error": "11.0.3",
         "simple-oauth2": "^5.0.0",
+        "winston": "3.8.2",
         "uuid": "^9.0.0"
     },
     "engines": {
