--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,7 +16,8 @@
     },
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "dependencies": {
-        "winston": "3.8.2"
+        "winston": "3.8.2",
+        "zod": "3.22.4"
     },
     "devDependencies": {}
 }
