[nan-644] bundle all deps

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
+    "bundleDependencies": true,
     "scripts": {
         "build": "rimraf ./dist && tsc"
     },
