[nan-591] add package

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -30,6 +30,9 @@
         },
         {
             "path": "packages/webapp"
+        },
+        {
+            "path": "packages/data-ingestion"
         }
     ]
 }
