--- a/packages/records/tsconfig.json
+++ b/packages/records/tsconfig.json
@@ -9,14 +9,8 @@
             "path": "../shared"
         },
         {
-            "path": "../node-client"
-        },
-        {
             "path": "../utils"
-        },
-        {
-            "path": "../records"
         }
     ],
-    "include": ["lib/**/*", "../shared/lib/express.d.ts"]
+    "include": ["lib/**/*"]
 }
