--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -23,6 +23,9 @@
             "path": "packages/persist"
         },
         {
+            "path": "packages/records"
+        },
+        {
             "path": "packages/runner"
         },
         {
