--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,6 +25,7 @@
         "@hapi/boom": "^10.0.1",
         "@nangohq/shared": "^0.39.15",
         "@nangohq/utils": "file:../utils",
+        "@nangohq/records": "file:../records",
         "@workos-inc/node": "^6.2.0",
         "axios": "^1.3.4",
         "body-parser": "1.20.2",
