(feat) [nan-591] insert into bigQuery (#1903)
## Describe your changes
Add in BigQuery data ingestion from sync, actions, and webhooks

## Issue ticket number and link
NAN-591

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -13,6 +13,9 @@
         },
         {
             "path": "../utils"
+        },
+        {
+            "path": "../data-ingestion"
         }
     ],
     "include": ["lib/**/*"]
