--- a/.env.example
+++ b/.env.example
@@ -74,6 +74,9 @@ DEFAULT_GITHUB_CLIENT_SECRET=
 WORKOS_API_KEY=
 WORKOS_CLIENT_ID=
 
+# Google Cloud Configuration
+GOOGLE_APPLICATION_CREDENTIALS=
+
 # Encryption key for secrets / records stored in database
 NANGO_ENCRYPTION_KEY=
 
