--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -15,6 +15,7 @@
         "directory": "packages/jobs"
     },
     "dependencies": {
+        "@nangohq/data-ingestion": "file:../data-ingestion",
         "@nangohq/nango-runner": "^1.0.0",
         "@nangohq/shared": "^0.39.13",
         "@nangohq/utils": "file:../utils",
