--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -50,7 +50,7 @@
         "pg": "^8.8.0",
         "posthog-node": "^3.1.3",
         "rate-limiter-flexible": "^5.0.0",
-        "redis": "^4.6.11",
+        "redis": "4.6.13",
         "simple-oauth2": "^5.0.0",
         "uuid": "^9.0.0",
         "ws": "^8.12.1"
