--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -49,7 +49,7 @@
         "pg": "^8.8.0",
         "posthog-node": "^3.1.3",
         "qs": "^6.11.2",
-        "redis": "^4.6.11",
+        "redis": "4.6.13",
         "rimraf": "^5.0.1",
         "semver": "^7.5.4",
         "serialize-error": "11.0.3",
